--- a/PA1_template.html
+++ b/PA1_template.html
@@ -582,8 +582,8 @@ head(imputed_interval_steps)</code></pre>
 ## 6       25              2.09</code></pre>
 </div>
 </div>
-<div id="histogram" class="section level3">
-<h3>Histogram</h3>
+<div id="histogram-of-daily-step-data-with-imputed-means" class="section level3">
+<h3>Histogram of Daily Step Data (With Imputed Means)</h3>
 <blockquote>
 <p>Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?</p>
 </blockquote>
